* Added pole display and separate cash drawer open calls. (Chris T)

User Interface:
* Moved IS/IR/OE the lineitem column list to the LedgerSMB::Sysconfig Chris T) 
* Invoice now has an Onhand column (Chris T)
* Added simple text import function for invoices received (PDT's) (Chris T)

Other:
* ledger-smb.conf is now an ini file (Seneca)

Changelog for LedgerSMB 1.1.1

* Fixed problem with parts_short trigger not being created
* Fixed problem with custom fields functions not being created
* Pg driver is now checked by default. 

Changelog for LedgerSMB 1.1.0

Database
* Added add_custom_field and drop_custom_field functions.
	-- will be more integrated into API next version
* Added utility to partially recover from SQL-Ledger data corruption issues.
* Primary Key added to acc_trans table
* DB Updates now use one transaction per update file.
* FLOAT datatypes removed from database
* Protection against duplicate transaction id's.
* Added foreign key constraint to acc_trans.chart_id
* Database backups now use pg_dump
* Database creation routines now attempt to add plpgsql to the db if not there.
* Transaction reversal is now enforced by default

Security
* One is required to change the admin password when it is blank (on first login etc).

Usability
* We now support adding custom automation into a custom.pl
* Setup.pl use is now experimentally supported
* Disabled editing sub-assemblies in one area where it is unsafe.
* Utility included for near-real-time parts short email notifications.
* Fixed Lynx support
* Batch printing now available for checks
* Warnings are printed when check stub is truncated
* Sales Data Report added
* SL2LS.pl now dies if it cannot open the files with instructions on how to proceed manually
* Links between admin and login pages
* Experimental support for Windows printing

Changelog for LedgerSMB v 1.0.0p1
* Fixed directory transversal/arbitrary code execution vulnerability.

Changelog for LedgerSMB v 1.0.0
